--- a/graphics-and-multimedia/sorting-visualization/css/main.css
+++ b/graphics-and-multimedia/sorting-visualization/css/main.css
@@ -11,6 +11,7 @@ div#controller {
     border-radius : 0.5em;
     box-shadow    : 0 0 1px #a2a2a4;
     opacity       : 0.8;
+    z-index       : 500;
 }
 div#controller:hover {
     opacity       : 1;
